# ku-notice-monitor-for-all

./: .gitignore  README.md  SETUP.md  com.konkuk.monitor.plist  commands.py  config.yaml  constants.py  feeds.py  latest_articles.json  main.py  matcher.py  notifier.py  pyproject.toml  requirements.txt  search_handler.py  state.json  users.json  users.py
.github/workflows/: ci.yml  commands.yml  monitor.yml  search.yml
tests/: conftest.py  helpers.py  test_commands.py  test_feeds.py  test_main.py  test_matcher.py  test_notifier.py
