[project]
name = "ku-notice-monitor"
version = "1.0.0"
description = "건국대학교 공지사항 모니터링 에이전트"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0",
    "google-genai>=1.0.0",
    "python-telegram-bot>=21.0",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "aiohttp>=3.9",
    "certifi>=2024.2",
    "tenacity>=8.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
